fixed the copy-pasting of link on mobile

--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -152,6 +152,7 @@
 
     background-color: $colorMain;
     padding: 16px;
+    word-break: break-word;
     overflow-wrap: anywhere;
 
     pointer-events: none;
